Fixed waiting screen alignment to match User and Admin Screens.

--- a/wait-wise/src/App.css
+++ b/wait-wise/src/App.css
@@ -20,15 +20,16 @@ h1 {
   font-style: Verdana;
     text-align: center;
     color: rgb(255, 255, 255);
-    font-size: 48px;
+    font-size: 50px;
     margin-bottom: 10px;
+    margin-top: 30px;
     letter-spacing: 2px;
 }
 
 h2 {
     text-align: center;
     color: white !important;
-    font-size: 12px;
+    font-size: 1.5em !important;
     font-weight: normal;
     margin-bottom: 35px;
 }
